--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="v-guessing-game">
     <div class="loading-container">
       <div class="ball"></div>
       <div class="ball"></div>
